--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
         </div>
         <div><span id="score-number">0</span></div>
         <div>
+          <img
+            id="health-bar"
+            src="/images/healthbar_full.png"
+            alt="health bar image"
+          />
+        </div>
+        <div>
           <button id="restartBtn" type="button">Restart</button>
         </div>
         <div>
