some more styling done

--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
           />
         </div>
         <div>
-          <button id="restartBtn" type="button">Restart</button>
+          <button
+            onClick="window.location.reload();"
+            id="restartBtn"
+            type="button"
+          >
+            Restart
+          </button>
         </div>
         <div>
           <input
