--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
           Batman needs your help player. He's blind and he needs YOU to help him
           get the X-Ray vision back. <br /><br />
           Stay away from the Penguins and avoid Jokers at all costs.<br /><br />Catch
-          some Lemons if you're hurt and collect Bat Signals to move up to the
-          next level.<br /><br />If you collect enough of those, Batman will be
-          able to see again.<br /><br />Don't leave Batman blind please. Gotham
-          appreciates it.
+          some Lemons if you're hurt and collect 15 Bat Signals<br /><br />If
+          you make it, Batman will be able to see again.<br /><br />Don't leave
+          Batman blind please. Gotham appreciates it.
         </h2>
       </div>
       <div class="arrows">
@@ -128,16 +127,16 @@
       </div>
       <div id="go_uktext">
         <p>
-          Bad luck.. that Batman only has you to help him. Useless.<br /><br />He's
+          Bad luck... that Batman only has you to help him. Useless.<br /><br />He's
           still blind because of you.
         </p>
       </div>
-      <div class="highscores">
+      <!-- <div class="highscores">
         <div id="scoreboard">
           <img src="/images/highscore.png" alt="highscore title image" />
         </div>
-        <div id="high-scores-table"><ol></ol></div>
-      </div>
+       <div id="high-scores-table"><ol></ol></div>
+      </div> -->
       <div>
         <div class="btn-position">
           <button id="tryagainBtn" type="button">Try Again</button>
@@ -178,7 +177,7 @@
           Now he's seeing again!
         </p>
       </div>
-      <div class="highscores">
+      <!-- <div class="highscores">
         <div>
           <img
             id="scoreboard"
@@ -187,7 +186,7 @@
           />
         </div>
         <div><ol id="high-scores-table"></ol></div>
-      </div>
+      </div> -->
       <div class="btn-position">
         <button id="playagainBtn" type="button">Play Again</button>
       </div>
