--- a/index.html
+++ b/index.html
@@ -68,12 +68,7 @@
         />
       </div>
     </div>
-    <!-- <audio
-      id="intro-song"
-      src="./audio/intro_song.m4a"
-      autoplay="autoplay"
-      loop="loop"
-    ></audio> -->
+    <audio id="intro-song" src="./audio/intro_song.m4a" loop="loop"></audio>
     <!-- End of Splash Page -->
     <!-- Start of Game Play Page -->
     <div id="gameplay">
