--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       </div>
       <div>
         <h2 id="lp_uktext">
-          Batman needs your help player. He's blind and he needs YOU to help him
-          get the X-Ray vision back. <br /><br />
+          Batman needs your help <span id="player-name">player</span>. He's
+          blind and he needs YOU to help him get the X-Ray vision back.
+          <br /><br />
           Stay away from the Penguins and avoid Jokers at all costs.<br /><br />Catch
           some Lemons if you're hurt and collect 15 Bat Signals<br /><br />If
           you make it, Batman will be able to see again.<br /><br />Don't leave
@@ -166,8 +167,8 @@
       </div>
       <div>
         <p id="yw_uktext">
-          GREAT JOB!<br />Batman is a lucky Super Hero to have you by his
-          side.<br /><br />
+          GREAT JOB <span id="player-name">player</span>!<br />Batman is a lucky
+          Super Hero to have you by his side.<br /><br />
           Impressive.<br />
           Now he's seeing again!
         </p>
