--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="icon" type="image/x-icon" href="images/icon.ico" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Blind Batman</title>
   </head>
   <body>
     <!-- Start of Splash Page -->
     <div class="splashpage">
       <div>
-        <img
-          id="gamelogo"
-          src="/images/logo.png"
-          alt="Blind Batman Game Logo"
-        />
+        <img id="gamelogo" src="images/logo.png" alt="Blind Batman Game Logo" />
       </div>
       <div>
         <h2 id="lp_uktext">
@@ -30,18 +26,14 @@
         </h2>
       </div>
       <div class="arrows">
-        <img
-          id="left-arrow"
-          src="/images/left_arrow.png"
-          alt="left arrow key"
-        />
+        <img id="left-arrow" src="images/left_arrow.png" alt="left arrow key" />
         <p id="keys_uktext">
           Use these keys<br />
           to play
         </p>
         <img
           id="right-arrow"
-          src="/images/right_arrow.png"
+          src="images/right_arrow.png"
           alt="right arrow key"
         />
       </div>
@@ -52,7 +44,7 @@
         <input
           class="sound"
           type="image"
-          src="/images/sound_off.png"
+          src="images/sound_off.png"
           name="submit"
           width="44"
           height="70"
@@ -61,7 +53,7 @@
         <input
           class="lang"
           type="image"
-          src="/images/pt_flag.png"
+          src="images/pt_flag.png"
           name="submit"
           width="70"
           height="70"
@@ -69,7 +61,7 @@
         />
       </div>
     </div>
-    <audio id="intro-song" src="./audio/intro_song.m4a" loop="loop"></audio>
+    <audio id="intro-song" src="audio/intro_song.m4a" loop="loop"></audio>
     <!-- End of Splash Page -->
     <!-- Start of Game Play Page -->
     <div id="gameplay">
@@ -80,7 +72,7 @@
         <div>
           <img
             id="current-score"
-            src="/images/score.png"
+            src="images/score.png"
             alt="current score title image"
           />
         </div>
@@ -88,7 +80,7 @@
         <div>
           <img
             id="health-bar"
-            src="/images/healthbar_full.png"
+            src="images/healthbar_full.png"
             alt="health bar image"
           />
         </div>
@@ -106,7 +98,7 @@
             id="muteBtn"
             class="sound"
             type="image"
-            src="/images/sound_off.png"
+            src="images/sound_off.png"
             name="submit"
             width="44"
             height="70"
@@ -119,7 +111,7 @@
     <!-- Start of Gameover Page -->
     <div id="gameover">
       <div id="gologo">
-        <img src="/images/gameover.png" alt="Game Over image" />
+        <img src="images/gameover.png" alt="Game Over image" />
       </div>
       <div id="go_uktext">
         <p>
@@ -141,7 +133,7 @@
           <input
             class="sound"
             type="image"
-            src="/images/sound_off.png"
+            src="images/sound_off.png"
             name="submit"
             width="44"
             height="70"
@@ -150,7 +142,7 @@
           <input
             class="lang"
             type="image"
-            src="/images/pt_flag.png"
+            src="images/pt_flag.png"
             name="submit"
             width="70"
             height="70"
@@ -163,7 +155,7 @@
     <!-- Start of Winner Page -->
     <div id="winner">
       <div id="winlogo">
-        <img src="/images/winner.png" alt="You Win image" />
+        <img src="images/winner.png" alt="You Win image" />
       </div>
       <div>
         <p id="yw_uktext">
@@ -190,7 +182,7 @@
         <input
           class="sound"
           type="image"
-          src="/images/sound_off.png"
+          src="images/sound_off.png"
           name="submit"
           width="44"
           height="70"
@@ -199,7 +191,7 @@
         <input
           class="lang"
           type="image"
-          src="/images/pt_flag.png"
+          src="images/pt_flag.png"
           name="submit"
           width="70"
           height="70"
@@ -208,6 +200,6 @@
       </div>
     </div>
     <!-- End of Winner Page -->
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
