--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button id="startBtn" type="button">Start</button>
       </div>
       <div class="last-btns">
-        <input
+        <img
           class="sound"
           type="image"
           src="images/sound_off.png"
@@ -94,7 +94,7 @@
           </button>
         </div>
         <div>
-          <input
+          <img
             id="muteBtn"
             class="sound"
             type="image"
@@ -130,7 +130,7 @@
           <button id="tryagainBtn" type="button">Try Again</button>
         </div>
         <div class="last-btns">
-          <input
+          <img
             class="sound"
             type="image"
             src="images/sound_off.png"
@@ -179,7 +179,7 @@
         <button id="playagainBtn" type="button">Play Again</button>
       </div>
       <div class="last-btns">
-        <input
+        <img
           class="sound"
           type="image"
           src="images/sound_off.png"
